trunk/antlr-generated/org/kasunbg/cminus/CMinusParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 src/org/kasunbg/cminus/CMinus.g 2011-03-17 00:42:21

  package org.kasunbg.cminus; 


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
/**
 * Copyright 2011 Kasun Gajasinghe
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations
 * under the License.
*/
public class CMinusParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "SEMICOLON", "LEFT_SQUARE_BRACKET", "NUM", "RIGHT_SQUARE_BRACKET", "KEYWORD_INT", "KEYWORD_VOID", "LEFT_PAREN", "RIGHT_PAREN", "COMMA", "LEFT_BRACE", "RIGHT_BRACE", "KEYWORD_IF", "KEYWORD_ELSE", "KEYWORD_WHILE", "KEYWORD_RETURN", "EQUAL", "PLUS", "MINUS", "MULTI", "DIVISION", "LESS_THAN", "LESS_THAN_OR_EQUAL", "GREATER_THAN", "GREATER_THAN_OR_EQUAL", "EQUAL_EQUAL", "NOT_EQUAL", "NEWLINE", "COMMENT", "LETTER", "DIGIT", "WHITESPACE"
    };
    public static final int RIGHT_BRACE=15;
    public static final int LESS_THAN_OR_EQUAL=26;
    public static final int EQUAL_EQUAL=29;
    public static final int GREATER_THAN=27;
    public static final int KEYWORD_ELSE=17;
    public static final int KEYWORD_RETURN=19;
    public static final int LETTER=33;
    public static final int WHITESPACE=35;
    public static final int SEMICOLON=5;
    public static final int MULTI=23;
    public static final int MINUS=22;
    public static final int ID=4;
    public static final int EOF=-1;
    public static final int NUM=7;
    public static final int LEFT_SQUARE_BRACKET=6;
    public static final int RIGHT_SQUARE_BRACKET=8;
    public static final int GREATER_THAN_OR_EQUAL=28;
    public static final int RIGHT_PAREN=12;
    public static final int NEWLINE=31;
    public static final int KEYWORD_INT=9;
    public static final int NOT_EQUAL=30;
    public static final int COMMA=13;
    public static final int LEFT_BRACE=14;
    public static final int KEYWORD_IF=16;
    public static final int EQUAL=20;
    public static final int KEYWORD_VOID=10;
    public static final int KEYWORD_WHILE=18;
    public static final int LESS_THAN=25;
    public static final int DIVISION=24;
    public static final int LEFT_PAREN=11;
    public static final int PLUS=21;
    public static final int DIGIT=34;
    public static final int COMMENT=32;

    // delegates
    // delegators


        public CMinusParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public CMinusParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return CMinusParser.tokenNames; }
    public String getGrammarFileName() { return "src/org/kasunbg/cminus/CMinus.g"; }



    // $ANTLR start "program"
    // src/org/kasunbg/cminus/CMinus.g:36:1: program : declarationList ;
    public final void program() throws RecognitionException {
        try {
            // src/org/kasunbg/cminus/CMinus.g:37:2: ( declarationList )
            // src/org/kasunbg/cminus/CMinus.g:37:5: declarationList
            {
            pushFollow(FOLLOW_declarationList_in_program68);
            declarationList();

            state._fsp--;
            if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "program"


    // $ANTLR start "declarationList"
    // src/org/kasunbg/cminus/CMinus.g:40:1: declarationList : ( declaration )+ ;
    public final void declarationList() throws RecognitionException {
        try {
            // src/org/kasunbg/cminus/CMinus.g:41:2: ( ( declaration )+ )
            // src/org/kasunbg/cminus/CMinus.g:41:4: ( declaration )+
            {
            // src/org/kasunbg/cminus/CMinus.g:41:4: ( declaration )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=KEYWORD_INT && LA1_0<=KEYWORD_VOID)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // src/org/kasunbg/cminus/CMinus.g:41:4: declaration
            	    {
            	    pushFollow(FOLLOW_declaration_in_declarationList87);
            	    declaration();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return ;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "declarationList"


    // $ANTLR start "declaration"
    // src/org/kasunbg/cminus/CMinus.g:44:1: declaration : ( varDeclaration | funDeclaration );
    public final void declaration() throws RecognitionException {
        try {
            // src/org/kasunbg/cminus/CMinus.g:45:2: ( varDeclaration | funDeclaration )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==KEYWORD_INT) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==ID) ) {
                    int LA2_3 = input.LA(3);

                    if ( (LA2_3==LEFT_PAREN) ) {
                        alt2=2;
                    }
                    else if ( ((LA2_3>=SEMICOLON && LA2_3<=LEFT_SQUARE_BRACKET)) ) {
                        alt2=1;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return ;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 2, 3, input);

                        throw nvae;
                    }
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;
                }
            }
            else if ( (LA2_0==KEYWORD_VOID) ) {
                alt2=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // src/org/kasunbg/cminus/CMinus.g:45:4: varDeclaration
                    {
                    pushFollow(FOLLOW_varDeclaration_in_declaration102);
                    varDeclaration();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // src/org/kasunbg/cminus/CMinus.g:45:21: funDeclaration
                    {
                    pushFollow(FOLLOW_funDeclaration_in_declaration106);
                    funDeclaration();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "declaration"


    // $ANTLR start "varDeclaration"
    // src/org/kasunbg/cminus/CMinus.g:48:1: varDeclaration : ( varTypeSpecifier ID SEMICOLON | varTypeSpecifier ID LEFT_SQUARE_BRACKET NUM RIGHT_SQUARE_BRACKET SEMICOLON );
    public final void varDeclaration() throws RecognitionException {
        try {
            // src/org/kasunbg/cminus/CMinus.g:49:2: ( varTypeSpecifier ID SEMICOLON | varTypeSpecifier ID LEFT_SQUARE_BRACKET NUM RIGHT_SQUARE_BRACKET SEMICOLON )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==KEYWORD_INT) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==ID) ) {
                    int LA3_2 = input.LA(3);

                    if ( (LA3_2==SEMICOLON) ) {
                        alt3=1;
                    }
                    else if ( (LA3_2==LEFT_SQUARE_BRACKET) ) {
                        alt3=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return ;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 2, input);

                        throw nvae;
                    }
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // src/org/kasunbg/cminus/CMinus.g:49:4: varTypeSpecifier ID SEMICOLON
                    {
                    pushFollow(FOLLOW_varTypeSpecifier_in_varDeclaration122);
                    varTypeSpecifier();

                    state._fsp--;
                    if (state.failed) return ;
                    match(input,ID,FOLLOW_ID_in_varDeclaration124); if (state.failed) return ;
                    match(input,SEMICOLON,FOLLOW_SEMICOLON_in_varDeclaration126); if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // src/org/kasunbg/cminus/CMinus.g:50:4: varTypeSpecifier ID LEFT_SQUARE_BRACKET NUM RIGHT_SQUARE_BRACKET SEMICOLON
                    {
                    pushFollow(FOLLOW_varTypeSpecifier_in_varDeclaration133);
                    varTypeSpecifier();

                    state._fsp--;
                    if (state.failed) return ;
                    match(input,ID,FOLLOW_ID_in_varDeclaration135); if (state.failed) return ;
                    match(input,LEFT_SQUARE_BRACKET,FOLLOW_LEFT_SQUARE_BRACKET_in_varDeclaration137); if (state.failed) return ;
                    match(input,NUM,FOLLOW_NUM_in_varDeclaration139); if (state.failed) return ;
                    match(input,RIGHT_SQUARE_BRACKET,FOLLOW_RIGHT_SQUARE_BRACKET_in_varDeclaration141); if (state.failed) return ;
                    match(input,SEMICOLON,FOLLOW_SEMICOLON_in_varDeclaration143); if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "varDeclaration"


    // $ANTLR start "varTypeSpecifier"
    // src/org/kasunbg/cminus/CMinus.g:53:1: varTypeSpecifier : KEYWORD_INT ;
    public final void varTypeSpecifier() throws RecognitionException {
        try {
            // src/org/kasunbg/cminus/CMinus.g:54:2: ( KEYWORD_INT )
            // src/org/kasunbg/cminus/CMinus.g:54:4: KEYWORD_INT
            {
            match(input,KEYWORD_INT,FOLLOW_KEYWORD_INT_in_varTypeSpecifier155); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "varTypeSpecifier"


    // $ANTLR start "funTypeSpecifier"
    // src/org/kasunbg/cminus/CMinus.g:57:1: funTypeSpecifier : ( KEYWORD_INT | KEYWORD_VOID );
    public final void funTypeSpecifier() throws RecognitionException {
        try {
            // src/org/kasunbg/cminus/CMinus.g:58:2: ( KEYWORD_INT | KEYWORD_VOID )
            // src/org/kasunbg/cminus/CMinus.g:
            {
            if ( (input.LA(1)>=KEYWORD_INT && input.LA(1)<=KEYWORD_VOID) ) {
                input.consume();
                state.errorRecovery=false;state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "funTypeSpecifier"


    // $ANTLR start "funDeclaration"
    // src/org/kasunbg/cminus/CMinus.g:61:1: funDeclaration : funTypeSpecifier ID LEFT_PAREN params RIGHT_PAREN compoundStmt ;
    public final void funDeclaration() throws RecognitionException {
        try {
            // src/org/kasunbg/cminus/CMinus.g:62:2: ( funTypeSpecifier ID LEFT_PAREN params RIGHT_PAREN compoundStmt )
            // src/org/kasunbg/cminus/CMinus.g:62:4: funTypeSpecifier ID LEFT_PAREN params RIGHT_PAREN compoundStmt
            {
            pushFollow(FOLLOW_funTypeSpecifier_in_funDeclaration187);
            funTypeSpecifier();

            state._fsp--;
            if (state.failed) return ;
            match(input,ID,FOLLOW_ID_in_funDeclaration189); if (state.failed) return ;
            match(input,LEFT_PAREN,FOLLOW_LEFT_PAREN_in_funDeclaration191); if (state.failed) return ;
            pushFollow(FOLLOW_params_in_funDeclaration193);
            params();

            state._fsp--;
            if (state.failed) return ;
            match(input,RIGHT_PAREN,FOLLOW_RIGHT_PAREN_in_funDeclaration195); if (state.failed) return ;
            pushFollow(FOLLOW_compoundStmt_in_funDeclaration197);
            compoundStmt();

            state._fsp--;
            if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "funDeclaration"


    // $ANTLR start "params"
    // src/org/kasunbg/cminus/CMinus.g:65:1: params : ( paramList | KEYWORD_VOID );
    public final void params() throws RecognitionException {
        try {
            // src/org/kasunbg/cminus/CMinus.g:66:2: ( paramList | KEYWORD_VOID )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==KEYWORD_INT) ) {
                alt4=1;
            }
            else if ( (LA4_0==KEYWORD_VOID) ) {
                alt4=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // src/org/kasunbg/cminus/CMinus.g:66:4: paramList
                    {
                    pushFollow(FOLLOW_paramList_in_params212);
                    paramList();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // src/org/kasunbg/cminus/CMinus.g:66:16: KEYWORD_VOID
                    {
                    match(input,KEYWORD_VOID,FOLLOW_KEYWORD_VOID_in_params216); if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "params"


    // $ANTLR start "paramList"
    // src/org/kasunbg/cminus/CMinus.g:69:1: paramList : param ( COMMA param )* ;
    public final void paramList() throws RecognitionException {
        try {
            // src/org/kasunbg/cminus/CMinus.g:70:2: ( param ( COMMA param )* )
            // src/org/kasunbg/cminus/CMinus.g:70:4: param ( COMMA param )*
            {
            pushFollow(FOLLOW_param_in_paramList229);
            param();

            state._fsp--;
            if (state.failed) return ;
            // src/org/kasunbg/cminus/CMinus.g:70:10: ( COMMA param )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COMMA) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // src/org/kasunbg/cminus/CMinus.g:70:12: COMMA param
            	    {
            	    match(input,COMMA,FOLLOW_COMMA_in_paramList233); if (state.failed) return ;
            	    pushFollow(FOLLOW_param_in_paramList235);
            	    param();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "paramList"


    // $ANTLR start "param"
    // src/org/kasunbg/cminus/CMinus.g:73:1: param : varTypeSpecifier ID ( LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET )? ;
    public final void param() throws RecognitionException {
        try {
            // src/org/kasunbg/cminus/CMinus.g:74:2: ( varTypeSpecifier ID ( LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET )? )
            // src/org/kasunbg/cminus/CMinus.g:74:4: varTypeSpecifier ID ( LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET )?
            {
            pushFollow(FOLLOW_varTypeSpecifier_in_param251);
            varTypeSpecifier();

            state._fsp--;
            if (state.failed) return ;
            match(input,ID,FOLLOW_ID_in_param253); if (state.failed) return ;
            // src/org/kasunbg/cminus/CMinus.g:74:24: ( LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==LEFT_SQUARE_BRACKET) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // src/org/kasunbg/cminus/CMinus.g:74:26: LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
                    {
                    match(input,LEFT_SQUARE_BRACKET,FOLLOW_LEFT_SQUARE_BRACKET_in_param257); if (state.failed) return ;
                    match(input,RIGHT_SQUARE_BRACKET,FOLLOW_RIGHT_SQUARE_BRACKET_in_param259); if (state.failed) return ;

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "param"


    // $ANTLR start "compoundStmt"
    // src/org/kasunbg/cminus/CMinus.g:77:1: compoundStmt : LEFT_BRACE localDeclarations statementList RIGHT_BRACE ;
    public final void compoundStmt() throws RecognitionException {
        try {
            // src/org/kasunbg/cminus/CMinus.g:78:2: ( LEFT_BRACE localDeclarations statementList RIGHT_BRACE )
            // src/org/kasunbg/cminus/CMinus.g:78:4: LEFT_BRACE localDeclarations statementList RIGHT_BRACE
            {
            match(input,LEFT_BRACE,FOLLOW_LEFT_BRACE_in_compoundStmt274); if (state.failed) return ;
            pushFollow(FOLLOW_localDeclarations_in_compoundStmt276);
            localDeclarations();

            state._fsp--;
            if (state.failed) return ;
            pushFollow(FOLLOW_statementList_in_compoundStmt278);
            statementList();

            state._fsp--;
            if (state.failed) return ;
            match(input,RIGHT_BRACE,FOLLOW_RIGHT_BRACE_in_compoundStmt280); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "compoundStmt"


    // $ANTLR start "localDeclarations"
    // src/org/kasunbg/cminus/CMinus.g:81:1: localDeclarations : ( varDeclaration )* ;
    public final void localDeclarations() throws RecognitionException {
        try {
            // src/org/kasunbg/cminus/CMinus.g:82:2: ( ( varDeclaration )* )
            // src/org/kasunbg/cminus/CMinus.g:82:4: ( varDeclaration )*
            {
            // src/org/kasunbg/cminus/CMinus.g:82:4: ( varDeclaration )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==KEYWORD_INT) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // src/org/kasunbg/cminus/CMinus.g:82:4: varDeclaration
            	    {
            	    pushFollow(FOLLOW_varDeclaration_in_localDeclarations293);
            	    varDeclaration();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "localDeclarations"


    // $ANTLR start "statementList"
    // src/org/kasunbg/cminus/CMinus.g:85:1: statementList : ( statement )* ;
    public final void statementList() throws RecognitionException {
        try {
            // src/org/kasunbg/cminus/CMinus.g:86:2: ( ( statement )* )
            // src/org/kasunbg/cminus/CMinus.g:86:4: ( statement )*
            {
            // src/org/kasunbg/cminus/CMinus.g:86:4: ( statement )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( ((LA8_0>=ID && LA8_0<=SEMICOLON)||LA8_0==NUM||LA8_0==LEFT_PAREN||LA8_0==LEFT_BRACE||LA8_0==KEYWORD_IF||(LA8_0>=KEYWORD_WHILE && LA8_0<=KEYWORD_RETURN)) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // src/org/kasunbg/cminus/CMinus.g:86:4: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_statementList307);
            	    statement();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "statementList"


    // $ANTLR start "statement"
    // src/org/kasunbg/cminus/CMinus.g:89:1: statement : ( expressionStmt | compoundStmt | selectionStmt | iterationStmt | returnStmt );
    public final void statement() throws RecognitionException {
        try {
            // src/org/kasunbg/cminus/CMinus.g:90:2: ( expressionStmt | compoundStmt | selectionStmt | iterationStmt | returnStmt )
            int alt9=5;
            switch ( input.LA(1) ) {
            case ID:
            case SEMICOLON:
            case NUM:
            case LEFT_PAREN:
                {
                alt9=1;
                }
                break;
            case LEFT_BRACE:
                {
                alt9=2;
                }
                break;
            case KEYWORD_IF:
                {
                alt9=3;
                }
                break;
            case KEYWORD_WHILE:
                {
                alt9=4;
                }
                break;
            case KEYWORD_RETURN:
                {
                alt9=5;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;
            }

            switch (alt9) {
                case 1 :
                    // src/org/kasunbg/cminus/CMinus.g:90:4: expressionStmt
                    {
                    pushFollow(FOLLOW_expressionStmt_in_statement321);
                    expressionStmt();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // src/org/kasunbg/cminus/CMinus.g:91:4: compoundStmt
                    {
                    pushFollow(FOLLOW_compoundStmt_in_statement326);
                    compoundStmt();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 3 :
                    // src/org/kasunbg/cminus/CMinus.g:92:4: selectionStmt
                    {
                    pushFollow(FOLLOW_selectionStmt_in_statement331);
                    selectionStmt();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 4 :
                    // src/org/kasunbg/cminus/CMinus.g:93:4: iterationStmt
                    {
                    pushFollow(FOLLOW_iterationStmt_in_statement336);
                    iterationStmt();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 5 :
                    // src/org/kasunbg/cminus/CMinus.g:94:4: returnStmt
                    {
                    pushFollow(FOLLOW_returnStmt_in_statement341);
                    returnStmt();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "statement"


    // $ANTLR start "expressionStmt"
    // src/org/kasunbg/cminus/CMinus.g:97:1: expressionStmt : ( expression SEMICOLON | SEMICOLON );
    public final void expressionStmt() throws RecognitionException {
        try {
            // src/org/kasunbg/cminus/CMinus.g:98:2: ( expression SEMICOLON | SEMICOLON )
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( (LA10_0==ID||LA10_0==NUM||LA10_0==LEFT_PAREN) ) {
                alt10=1;
            }
            else if ( (LA10_0==SEMICOLON) ) {
                alt10=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 10, 0, input);

                throw nvae;
            }
            switch (alt10) {
                case 1 :
                    // src/org/kasunbg/cminus/CMinus.g:98:4: expression SEMICOLON
                    {
                    pushFollow(FOLLOW_expression_in_expressionStmt355);
                    expression();

                    state._fsp--;
                    if (state.failed) return ;
                    match(input,SEMICOLON,FOLLOW_SEMICOLON_in_expressionStmt357); if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // src/org/kasunbg/cminus/CMinus.g:98:27: SEMICOLON
                    {
                    match(input,SEMICOLON,FOLLOW_SEMICOLON_in_expressionStmt361); if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "expressionStmt"


    // $ANTLR start "selectionStmt"
    // src/org/kasunbg/cminus/CMinus.g:101:1: selectionStmt : KEYWORD_IF LEFT_PAREN expression RIGHT_PAREN ( statement ) ( ( KEYWORD_ELSE )=> KEYWORD_ELSE ( statement ) )? ;
    public final void selectionStmt() throws RecognitionException {
        try {
            // src/org/kasunbg/cminus/CMinus.g:102:2: ( KEYWORD_IF LEFT_PAREN expression RIGHT_PAREN ( statement ) ( ( KEYWORD_ELSE )=> KEYWORD_ELSE ( statement ) )? )
            // src/org/kasunbg/cminus/CMinus.g:102:4: KEYWORD_IF LEFT_PAREN expression RIGHT_PAREN ( statement ) ( ( KEYWORD_ELSE )=> KEYWORD_ELSE ( statement ) )?
            {
            match(input,KEYWORD_IF,FOLLOW_KEYWORD_IF_in_selectionStmt378); if (state.failed) return ;
            match(input,LEFT_PAREN,FOLLOW_LEFT_PAREN_in_selectionStmt380); if (state.failed) return ;
            pushFollow(FOLLOW_expression_in_selectionStmt382);
            expression();

            state._fsp--;
            if (state.failed) return ;
            match(input,RIGHT_PAREN,FOLLOW_RIGHT_PAREN_in_selectionStmt384); if (state.failed) return ;
            // src/org/kasunbg/cminus/CMinus.g:102:49: ( statement )
            // src/org/kasunbg/cminus/CMinus.g:102:50: statement
            {
            pushFollow(FOLLOW_statement_in_selectionStmt387);
            statement();

            state._fsp--;
            if (state.failed) return ;

            }

            // src/org/kasunbg/cminus/CMinus.g:103:3: ( ( KEYWORD_ELSE )=> KEYWORD_ELSE ( statement ) )?
            int alt11=2;
            int LA11_0 = input.LA(1);

            if ( (LA11_0==KEYWORD_ELSE) ) {
                int LA11_1 = input.LA(2);
